--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             <div class="esquerda" class="movimentoRV">
                 <img src="imagens/js-logo-home-g.png" alt="">
                 <article>
-                    <h2>sites</h2>
+                    <h2>
+                        <ins>
+                            sites
+                        </ins>
+                    </h2>
                     <p>
                         sites do zero.
                         personalizado pra voce
@@ -59,7 +63,9 @@
                 <img src="imagens/js-logo-home-g.png" alt="">
                 <article>
                     <h2>
-                        completo
+                        <ins>
+                            completo 
+                        </ins>
                     </h2>
                     <p>
                         des da palheta de cores,
@@ -73,7 +79,9 @@
                 <img src="imagens/js-logo-home-g.png" alt="">
                 <article>
                     <h2>
-                        pra
+                        <ins>
+                            pra
+                        </ins>
                     </h2>
                     <p>
                         não espere mas 
@@ -86,7 +94,9 @@
                 <img src="imagens/js-logo-home-g.png" alt="">
                 <article>
                     <h2>
-                        vocÊ
+                        <ins>
+                            vocÊ
+                        </ins>
                     </h2>
                     <p>
                         este esta vazio
