--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </section>
         <section id="projetos" class="movimento">
             <div class="esquerda" class="movimentoRV">
-                <img src="imagens/js-logo-home-g.png" alt="">
+                <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
                 <article>
                     <h2>
                         <ins>
@@ -60,7 +60,7 @@
                 </article>
             </div>
             <div class="direita" class="movimento">
-                <img src="imagens/js-logo-home-g.png" alt="">
+                <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
                 <article>
                     <h2>
                         <ins>
@@ -76,7 +76,7 @@
                 </article>
             </div>
             <div class="esquerda"  class="movimentoRV">
-                <img src="imagens/js-logo-home-g.png" alt="">
+                <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
                 <article>
                     <h2>
                         <ins>
@@ -91,7 +91,7 @@
                 </article>
             </div>
             <div class="direita"  class="movimento">
-                <img src="imagens/js-logo-home-g.png" alt="">
+                <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
                 <article>
                     <h2>
                         <ins>
@@ -130,7 +130,7 @@
                     <a id="curriculo" href="#">curriculo</a>
                 </article>
             </div>
-            <h2>
+            <h2 id="frasesobremim">
                 eleve o nivel do seu site 
                 vamos trabalhar juntos
             </h2>
@@ -164,7 +164,7 @@
                 <h2>
                     numero de contato
                 </h2>
-                <p>
+                <p id="meunumero">
                     11 961796950
                 </p>
             </nav>
