--- a/index.html
+++ b/index.html
@@ -15,9 +15,17 @@
 <body>
     <header class="movimento">
         <nav class="menu">
-            <p class="movimento"><a href="#">inicio</a></p>
-            <p class="movimento"><a href="#">projetos</a></p>
-            <p class="movimento"><a href="#">sobre mim</a></p>
+            <ul>
+                <li class="movimento">
+                    <a href="#home">inicio</a>
+                </li>
+                <li class="movimento">
+                    <a href="#projetos">projetos</a>
+                </li>
+                <li class="movimento">
+                    <a href="#sobremim">sobre mim</a>
+                </li>
+            </ul>
         </nav>
     </header>
     <main>
