--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             </h2>
         </section>
     </main>
-    <footer class="movimento">
-        <div id="redes">
+    <footer>
+        <div id="redes" class="movimento">
             <h2>
                 resdes sociais
             </h2>
@@ -167,7 +167,7 @@
                 </p>
             </nav>
         </div>
-        <div id="contato">
+        <div id="contato" class="movimento">
             <nav>
                 <h2>
                     numero de contato
