--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
     <title>jc sites</title>
 </head>
-<body>
+<body id="magia">
     <header class="movimento">
         <nav class="menu">
             <ul>
