--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section id="projetos" class="movimento">
             <div class="esquerda" class="movimentoRV">
-                <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
+                <a href="projetos/paginaDeLogin/index.html"><img src="imagens/imagen-deonde-nao-tem-projeto.png" alt=""></a>
                 <article>
                     <h2>
                         <ins>
@@ -69,6 +69,7 @@
             </div>
             <div class="direita" class="movimento">
                 <img src="imagens/imagen-deonde-nao-tem-projeto.png" alt="">
+                
                 <article>
                     <h2>
                         <ins>
