--- a/projetos/paginaDeLogin/index.html
+++ b/projetos/paginaDeLogin/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Designer-_4_.ico" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
     <title>pagina de login</title>
 </head>
 <body>
     <main>
         <section>
-            <form action="">
+            <form action="js/valid.js">
                 <p>
-                    <label for="gmail">gmail</label>
-                    <input type="email">
+                    <label for="gmail"></label>
+                    <input type="email" id="gmail" name="gmail" placeholder="gmail">
                 </p>
                 <p>
                     <label for="senha"></label>
