--- a/projetos/paginaDeLogin/index.html
+++ b/projetos/paginaDeLogin/index.html
@@ -13,14 +13,14 @@
             <form action="js/valid.js">
                 <p>
                     <label for="gmail"></label>
-                    <input type="email" id="gmail" name="gmail" placeholder="gmail">
+                    <input type="email" id="gmail" name="gmail" placeholder="gmail" required>
                 </p>
                 <p>
                     <label for="senha"></label>
-                    <input type="password" name="senha" id="senha" required minlength="8" placeholder="senha">
+                    <input type="password" name="senha" id="senha" required minlength="8" placeholder="senha" required>
                 </p>
                 <p>
-                    <input type="submit" value="login">
+                    <input type="submit" value="login" id="login" name="login">
                 </p>
         </section>
     </main>
