--- a/projetos/paginaDeLogin/index.html
+++ b/projetos/paginaDeLogin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="imagens/Designer-_4_.ico" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="telasmaiores.css">
     <title>pagina de login</title>
 </head>
 <body>
