arrumei a pagina de logim
coloque uma imagem mudei a cor do botão adicionei uma foto tá ficando lindo

--- a/projetos/paginaDeLogin/index.html
+++ b/projetos/paginaDeLogin/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <section>
+            <img src="imagens/profile-8268938_1280.png" alt="foto du perfil">
             <form action="js/valid.js">
                 <p>
                     <label for="gmail"></label>
