--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </section>
         <section id="projetos" class="movimento">
             <div class="esquerda" class="movimentoRV">
-                <a href="projetos/paginaDeLogin/index.html"><img src="imagens/imagen-deonde-nao-tem-projeto.png" alt=""></a>
+                <a href="projetos/paginaDeLogin/index.html"><img src="imagens/Captura de tela 2024-09-03 215359.png" alt=""></a>
                 <article>
                     <h2>
                         <ins>
