não lembro o que eu tinha feito nesse dia
fiz alguma alteração  que não me recordo

--- a/projetos/paginaDeLogin/index.html
+++ b/projetos/paginaDeLogin/index.html
@@ -12,7 +12,7 @@
     <main>
         <section>
             <img src="imagens/profile-8268938_1280.png" alt="foto du perfil">
-            <form action="js/valid.js">
+            <form action="php/valid.php">
                 <p>
                     <label for="gmail"></label>
                     <input type="email" id="gmail" name="gmail" placeholder="gmail" required>
